# Simulation-environement-for-the-Perrobot

./: README.md  can_tests.py  legs.urdf.xacro  r.py  requirements.txt  s.py  test.py  u.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: perrobot.pc  perrobot_controller.pc  perrobot_description.pc  perrobot_gazebo.pc  perrobot_joystick.pc
perrobot_12dof/devel/: .catkin  _setup_util.py
perrobot_12dof/src/perrobot_12dof/: CMakeLists.txt
perrobot_12dof/src/perrobot_12dof_controller/: CMakeLists.txt
perrobot_12dof/src/perrobot_12dof_description/: CMakeLists.txt  package.xml
perrobot_12dof/src/perrobot_12dof_gazebo/: CMakeLists.txt
perrobot_12dof/src/perrobot_12dof_teleopkey/: CMakeLists.txt  package.xml
quadriped_robot_simulation/: CMakeLists.txt  package.xml
quadriped_robot_simulation/urdf/: quadriped.urdf.xacro
quadriped_robot_ws/devel/: .catkin  .rosinstall  _setup_util.py
quadriped_robot_ws/src/quadriped_robot/: CMakeLists.txt
quadriped_robot_ws/src/quadriped_robot/launch/: display.launch
src/perrobot/: CMakeLists.txt
src/perrobot/launch/: run_gazebo_12dof.launch
src/perrobot_controller/: CMakeLists.txt  package.xml
src/perrobot_controller/launch/: one_step_foward.launch  robot_controller_gazebo.launch  robot_controller_gazebo_12dof.launch
src/perrobot_controller/scripts/: all  fast_walk_backword.py  (+20 more)
src/perrobot_description/: CMakeLists.txt  package.xml
src/perrobot_gazebo/: CMakeLists.txt
src/perrobot_joystick/: CMakeLists.txt  package.xml
src/perrobot_teleop_key/: CMakeLists.txt
(+109 files in other folders)
